; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ac3enc_float.c_calc_cpl_coord.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ac3enc_float.c_calc_cpl_coord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COEF_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @calc_cpl_coord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @calc_cpl_coord(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca float, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store float 1.250000e-01, float* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %4, align 4
  %11 = sdiv i32 %9, %10
  %12 = call float @sqrtf(i32 %11)
  %13 = load float, float* %5, align 4
  %14 = fmul float %13, %12
  store float %14, float* %5, align 4
  br label %15

15:                                               ; preds = %8, %2
  %16 = load float, float* %5, align 4
  %17 = load i32, i32* @COEF_MAX, align 4
  %18 = call i32 @FFMIN(float %16, i32 %17)
  ret i32 %18
}

declare dso_local float @sqrtf(i32) #1

declare dso_local i32 @FFMIN(float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
